overflow fixes

--- a/src/pages/Country/components/CountryMain.module.scss
+++ b/src/pages/Country/components/CountryMain.module.scss
@@ -3,12 +3,14 @@
     box-sizing: border-box;
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(2, minmax(min-content, 1fr));
-    gap: 2rem;
+    align-items: center;
+    grid-template-columns: minmax(320px, 1fr) minmax(min-content, 1fr);
+    gap: 2rem 5%;
 }
 
 @media screen and (max-width: 60rem) {
     .main {
         grid-template-columns: repeat(1, minmax(min-content, 1fr));
+        justify-items: center;
     }
 }
