--- a/src/pages/Country/components/country-details/CountryFlag.module.scss
+++ b/src/pages/Country/components/country-details/CountryFlag.module.scss
@@ -1,22 +1,25 @@
 .flagContainer {
-    flex: 1;
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 20rem;
-    border: 5px;
+    border-radius: 5px;
     aspect-ratio: 1.5;
 }
 
 .flag {
     box-shadow: 0 .1rem .5rem var(--shadow);
     max-width: 90%;
-    max-height: 90%;
+    max-height: 100%;
 }
 
 @media screen and (max-width: 60rem) {
     .flagContainer {
-        aspect-ratio: unset;
+        aspect-ratio: revert;
+        max-width: 100%;
+        max-height: 100%;
+    }
+    .flag {
         max-height: 450px;
     }
 }
